fixing style issue on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -320,7 +320,6 @@ a:focus {
 
 .blog-post header h1 {
   margin: var(--spacing-0) var(--spacing-0) var(--spacing-4) var(--spacing-0);
-  white-space: pre;
 }
 
 .blog-post header p {
